--- a/src/PublicApi/appsettings.Docker.json
+++ b/src/PublicApi/appsettings.Docker.json
@@ -7,6 +7,7 @@
     "apiBase": "http://localhost:5200/api/",
     "webBase": "http://host.docker.internal:5106/"
   },
+  "UseOnlyInMemoryDatabase": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
