--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -24,6 +24,6 @@ stages:
       displayName: Build an image
       inputs:
         command: build
-        dockerfile: '$(Build.SourcesDirectory)/Web/Dockerfile'
+        dockerfile: '$(Build.SourcesDirectory)/src/Web/Dockerfile'
         tags: |
           $(tag)
